--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -9,7 +9,7 @@ server {
         proxy_set_header X-Forwarded-For $remote_addr;
     }
     location /api {
-        proxy_pass http://NodeJS_1:8080/;
+        proxy_pass http://server-api:8080/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
