--- a/serverapi/Dockerfile
+++ b/serverapi/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY . .
 ENV PATH /app/node_modules/.bin:$PATH
 RUN npm install
-CMD [ "npm", "start" ]
+CMD ["node", "start"]
 EXPOSE 8080
