--- a/serverapi/Dockerfile
+++ b/serverapi/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY . .
 ENV PATH /app/node_modules/.bin:$PATH
 RUN npm install
-CMD ["node", "start"]
+CMD ["npm", "start"]
 EXPOSE 8080
