--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,35 @@
 version: '3.8'
+networks:
+  nginx_network:
+    driver: bridge
+  # frontend:
+  #   driver: bridge
+  # backend:
+  #   driver: bridge
 
 services:
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    restart: always
+    volumes:
+      - ./nginx/conf.d:./etc/nginx/conf.d
+    ports:
+      - "80:80"
+    networks:
+      # - frontend
+      - nginx_network
+
   react-app:
     build: 
       context: ./test
       dockerfile: Dockerfile.prod
-    ports:
-      - "80:80"
     container_name: react_prod
+    networks:
+      # - frontend
+      # - backend
+      - nginx_network
     
 
   server-api:
@@ -16,7 +38,6 @@ services:
       dockerfile: Dockerfile
     container_name: server-api
     restart: always
-    links:
-      - react-app
-
-
+    networks:
+      - nginx_network
+      # - backend
