fix nginx configure

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name dev.workshop.test 18.139.162.205;
+    server_name dev.workshop.io 18.139.162.205;
 
     location / {
         proxy_pass http://react_prod:80/;
