--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,13 +4,21 @@ server {
     server_name dev.workshop.io 18.139.162.205;
 
     location / {
-        proxy_pass http://react_prod:80/;
+        proxy_pass http://react_prod/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
-    location /api {
-        proxy_pass http://server-api:8080/;
+}
+
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name workshop.io 18.139.162.205;
+
+    location / {
+        proxy_pass http://react_prod/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
+
 }
