--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -8,6 +8,11 @@ server {
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
+    location /api {
+        proxy_pass http://api_dev/;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
 }
 
 server {
@@ -20,5 +25,9 @@ server {
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
-
+    location /api {
+        proxy_pass http://api_prod/;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
 }
