--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,12 +4,12 @@ server {
     server_name dev.workshop.io 18.139.162.205;
 
     location / {
-        proxy_pass http://react_prod/;
+        proxy_pass http://react_dev:80/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
     location /api {
-        proxy_pass http://api_dev/;
+        proxy_pass http://api_dev:8000/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
@@ -21,12 +21,12 @@ server {
     server_name workshop.io 18.139.162.205;
 
     location / {
-        proxy_pass http://react_prod/;
+        proxy_pass http://react_prod:81/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
     location /api {
-        proxy_pass http://api_prod/;
+        proxy_pass http://api_prod:8080/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
