--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,9 @@ services:
     container_name: api_prod
     restart: always
       # - backend
+    networks:
+      # - frontend
+      - nginx_network
 
   react-app2:
     build: 
@@ -59,3 +62,6 @@ services:
       dockerfile: Dockerfile.dev
     container_name: api_dev
     restart: always
+    networks:
+      # - frontend
+      - nginx_network
