--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,15 +1,16 @@
+
 server {
     listen       80;
     listen  [::]:80;
-    server_name dev.workshop.io 18.139.162.205;
+    server_name workshop.io 18.139.162.205;
 
     location / {
-        proxy_pass http://react_dev:80/;
+        proxy_pass http://react_prod/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
     location /api {
-        proxy_pass http://api_dev:8000/;
+        proxy_pass http://api_prod:8080/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
@@ -18,15 +19,15 @@ server {
 server {
     listen       80;
     listen  [::]:80;
-    server_name workshop.io 18.139.162.205;
+    server_name dev.workshop.io 18.139.162.205;
 
     location / {
-        proxy_pass http://react_prod:81/;
+        proxy_pass http://react_dev/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
     location /api {
-        proxy_pass http://api_prod:8080/;
+        proxy_pass http://api_dev:8000/;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
